fixed image resize on mobile

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -44,6 +44,10 @@
     grid-column: 3 / 4;
 }
 
+.blog-img {
+    max-width: 100%;
+    height: auto;
+}
 
 @media (max-width: 900px) {   
     .blog-layout {
